2012-05-30  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm: More helpful error message if output filename
	is not acceptable.
	Bug #3529832

2012-05-20  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wcommon.h src/win/wgnuplib.h src/win/wgraph.c: Remove limit
	on number of plots which can be toggled on/off via key entries.
	Maximum number of toolbar buttons still restricted to MAXPLOTSHIDE.
	Bug #3516417

2012-05-17  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/faq-ja.tex docs/gnuplot-ja.doc man/gnuplot-ja.1:
	Sync with English FAQ rev. 1.48 and documentation rev. 1.701.2.14.

2012-05-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arc) src/graphics.c (do_ellipse):  Clip the filled
	interior of circles and ellipses.
	Bug #3522515

	* docs/gnuplot.doc src/graphics.c (do_rectangle):  Establish a clipping
	behavior for rectangles - clip to fit in the graph unless one or both
	corners are given in screen coordinates.

2012-05-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxt_cairo_refresh):  Execution of the
	command list must be protected by command_list_mutex or it will blow up
	if the command list is cleared/replaced during execution.
	Bug #3371205

	* src/graphics.c: allow log-scaled y axis when plotting with fillsteps
	Bug #3324785

2012-05-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lf_push lf_pop) src/misc.h:  The lf_push/lf_pop mechanism
	for restoring context after a "call" statement was saving the individual
	call args $0 $1 etc, but failing to save the number of active args.
	Bug #3525155

2012-05-08  Ethan A Merritt  <merritt@u.washington.edu>

	* CodeStyle config/Makefile.am.in configure.in demo/Makefile.am.in
	 lisp/Makefile.am m4/Makefile.am.in Makefile.am man/Makefile.am
	 share/LaTeX/Makefile.am share/Makefile.am src/Makefile.am
	 src/qtterminal/Makefile.am src/version.c src/wxterminal/Makefile.am
	 term/Makefile.am.in tutorial/Makefile.am.in:
