@@ -18,6 +18,7 @@ New features, changes and fixes since gnuplot version 4.6.0
 * FIX preserve number of active call arguments across a nested call command
 * FIX wxt terminal mutex protecting execution of the command list
 * FIX apply clipping to the interior fill of circles and ellipses
+* FIX corruption of weights used for plotting with smooth acsplines
 
 
 New features, changes and fixes in gnuplot version 4.6
